Prevent overscroll on mobile

--- a/style.css
+++ b/style.css
@@ -133,7 +133,8 @@ body {
 
   #container {
     margin: 0;
-    /*-webkit-overflow-scrolling: touch;*/
+    -webkit-overflow-scrolling: touch;
+    overscroll-behavior: none;
   }
 
   #buttonWrapper {
